--- a/ol-poison/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/cost-elements.a2e3882fa75db3d6c8577930894008fa4d361746.de-de.xlf
+++ b/ol-poison/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/cost-elements.a2e3882fa75db3d6c8577930894008fa4d361746.de-de.xlf
@@ -9,6 +9,7 @@
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
       <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">9b3a4824c1dcc88dacc143196319ddafba7412c7</xliffext:olskeletonhash>
       <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">eabc254170094025ce3cbce2d8e6c13fb0fb4dbf</xliffext:olxliffhash>
+      <xliffext:poisonError xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">The handback priority in file path cost-elements.a2e3882fa75db3d6c8577930894008fa4d361746.de-de.xlf is not match with handoff type basic</xliffext:poisonError>
     </header>
     <body>
       <group id="content" extype="content">
