--- a/ol-poison/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/Basic/payment-methods.36ecce094f2b415996a0de5b6e570e75bcb24cab.de-de.xlf
+++ b/ol-poison/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/Basic/payment-methods.36ecce094f2b415996a0de5b6e570e75bcb24cab.de-de.xlf
@@ -9,6 +9,7 @@
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
       <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f7df5a3195e9577f6ac8d11e503ba242aace5fb1</xliffext:olskeletonhash>
       <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">218d2500961afb2edc81e68151aaa4be3b3f7db2</xliffext:olxliffhash>
+      <xliffext:poisonError xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">The handback priority in file path Basic\payment-methods.36ecce094f2b415996a0de5b6e570e75bcb24cab.de-de.xlf is not match with handoff type basic</xliffext:poisonError>
     </header>
     <body>
       <group id="content" extype="content">
