--- a/ol-archive/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/basic/accounting-distributions.62861be3521a316ea24ec82c00651bf25cc65234.de-de.xlf
+++ b/ol-archive/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/basic/accounting-distributions.62861be3521a316ea24ec82c00651bf25cc65234.de-de.xlf
@@ -19,7 +19,7 @@
           <source>handing back 1st version of this file.This article provides information about accounting distributions and describes the options that are available for processing them.</source>
         </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
-          <source>Accounting distributions are used to allocate monetary amounts for a source document to specific ledger accounts.</source>
+          <source>Now handing back second handback of file of the same version/filehash. Accounting distributions are used to allocate monetary amounts for a source document to specific ledger accounts.</source>
         </trans-unit>
         <trans-unit id="104" translate="yes" xml:space="preserve">
           <source>Accounting distributions</source>
