--- a/ol-poison/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/basic/client-faq.2f9c9ae85c52e795f61fd37bafa2d1f436312ff1.sr-cyrl-rs.xlf
+++ b/ol-poison/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/basic/client-faq.2f9c9ae85c52e795f61fd37bafa2d1f436312ff1.sr-cyrl-rs.xlf
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="de-de">
     <header>
@@ -9,6 +9,7 @@
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
       <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">0eb0879cf110dd80cc23cacccff63f6fa965c019</xliffext:olskeletonhash>
       <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8b787ed66fd58c382a7e68b16014f53718c6cf77</xliffext:olxliffhash>
+      <xliffext:poisonError xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Handback file name: client-faq.2f9c9ae85c52e795f61fd37bafa2d1f436312ff1.sr-cyrl-rs is different with handoff file name: client-faq.2f9c9ae85c52e795f61fd37bafa2d1f436312ff1.de-de.</xliffext:poisonError>
     </header>
     <body>
       <group id="content" extype="content">
