test hb of prev poison and duplciate files

--- a/ol-handback/OpenLocalizationTestOrg/AX-Docs-Sandbox.ar-sa/master/basic/accounts-payable.abd99e977ea528e10b6bead4d6b395a0698f53ad.ar-sa.xlf
+++ b/ol-handback/OpenLocalizationTestOrg/AX-Docs-Sandbox.ar-sa/master/basic/accounts-payable.abd99e977ea528e10b6bead4d6b395a0698f53ad.ar-sa.xlf
@@ -106,7 +106,7 @@
           <source><bpt id="p1">[</bpt>Scenario: Take a discount that is more than the calculated discount for a vendor payment<ept id="p1">](take-discount-more-calculated-discount-vendor-payment.md)</ept></source>
         </trans-unit>
         <trans-unit id="132" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">[</bpt>Scenario: Take a cash discount outside the cash discount period<ept id="p1">](take-cash-discount-outside-cash-discount-timeframe.md)</ept></source>
+          <source><bpt id="p1">[</bpt>test hb prev poison and dup filesScenario: Take a cash discount outside the cash discount period<ept id="p1">](take-cash-discount-outside-cash-discount-timeframe.md)</ept></source>
         </trans-unit>
       </group>
     </body>
