--- a/ol-handback/OpenLocalizationTestOrg/AX-Docs-Sandbox.ar-sa/master/basic/deprecated-features.75823998cbb2f2052bb1254d9b32042b7527a698.ar-sa.xlf
+++ b/ol-handback/OpenLocalizationTestOrg/AX-Docs-Sandbox.ar-sa/master/basic/deprecated-features.75823998cbb2f2052bb1254d9b32042b7527a698.ar-sa.xlf
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ar-sa">
     <header>
@@ -2065,7 +2065,7 @@
           <source>Replaced by another feature?</source>
         </trans-unit>
         <trans-unit id="785" translate="yes" xml:space="preserve">
-          <source>Management Reporter (labeled <bpt id="p1">**</bpt>Financial reporting<ept id="p1">**</ept> in the current version of Dynamics AX)</source>
+          <source>test hb prev poison and dup filesManagement Reporter (labeled <bpt id="p1">**</bpt>Financial reporting<ept id="p1">**</ept> in the current version of Dynamics AX)</source>
         </trans-unit>
         <trans-unit id="786" translate="yes" xml:space="preserve">
           <source>Modules affected</source>
