--- a/ol-handback/OpenLocalizationTestOrg/AX-Docs-Sandbox.ar-sa/master/basic/accounts-payable.abd99e977ea528e10b6bead4d6b395a0698f53ad.ar-sa.xlf
+++ b/ol-handback/OpenLocalizationTestOrg/AX-Docs-Sandbox.ar-sa/master/basic/accounts-payable.abd99e977ea528e10b6bead4d6b395a0698f53ad.ar-sa.xlf
@@ -9,12 +9,11 @@
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
       <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1cccfb1546de6761132914ed49f01bd038c6c7a3</xliffext:olskeletonhash>
       <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1d7bc897bd13da032656598cdc8f70ef74da05e7</xliffext:olxliffhash>
-      <xliffext:poisonError xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Targeting source file commit 5c0c34d84dbba3a71480d50cf5d4fcd83dddedc6 is lower than latest handed back source file commit cb108ccea68c06958040cc688ffc4c29660d12d3</xliffext:poisonError>
     </header>
     <body>
       <group id="content" extype="content">
         <trans-unit id="101" translate="yes" xml:space="preserve">
-          <source>Test on March 23 - test hb of v1 when v2 already handed back end TEST HB OF V1 WHEN V2 in HO folder. Accounts payable home page</source>
+          <source>Accounts payable home page</source>
         </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
           <source>This topic provides a list of the help topics and other resources that are available for Accounts payable.</source>
