--- a/ol-handback/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/basic/125-percent-reducing-balance-depreciation.f2923d2f20e80e01c50b878e0504ce3db35a2ff0.de-de.xlf
+++ b/ol-handback/OpenLocalizationTestOrg/AX-Docs-Sandbox.de-de/master/basic/125-percent-reducing-balance-depreciation.f2923d2f20e80e01c50b878e0504ce3db35a2ff0.de-de.xlf
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="de-de">
     <header>
@@ -16,7 +16,7 @@
           <source>125 percent reducing balance depreciation</source>
         </trans-unit>
         <trans-unit id="102" translate="yes" xml:space="preserve">
-          <source>This article gives an overview of the 125 percent reducing balance method of depreciation.</source>
+          <source>test a changeThis article gives an overview of the 125 percent reducing balance method of depreciation.</source>
         </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
           <source>125 percent reducing balance depreciation</source>
